--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,44 @@
 @tailwind utilities;
 
 @layer components {
-  .button-content-flex-start-center {
-    @apply flex justify-start items-center gap-x-2;
-  }
+    .button-content-flex-start-center {
+        @apply flex justify-start items-center gap-x-2;
+    }
 
-  .ul-notification-container {
-    @apply w-64 px-3 py-2 rounded-md border border-gray-600/35 shadow-lg;
-  }
+    .ul-notification-container {
+        @apply w-64 px-3 py-2 rounded-md border border-gray-600/35 shadow-lg;
+    }
 
-  .button-content-flex-col-start-start {
-    @apply flex flex-col justify-start items-start gap-y-0.5;
-  }
+    .button-content-flex-col-start-start {
+        @apply flex flex-col justify-start items-start gap-y-0.5;
+    }
 
-  .ul-notification-container > li:not(:last-child) {
-    @apply border-b border-slate-500/30;
-  }
+    .ul-notification-container > li:not(:last-child) {
+        @apply border-b border-slate-500/30;
+    }
+    /* table */
+    .table-container {
+        @apply relative overflow-x-auto shadow-md  w-full max-h-[780px]  rounded-lg;
+    }
+    .custom-table {
+        @apply w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 border-separate;
+    }
+    .custom-table-head {
+        @apply text-xs text-gray-50 uppercase bg-gray-500 dark:bg-gray-700 dark:text-gray-400 sticky top-0 rounded-lg overflow-hidden;
+    }
+    tbody tr {
+        @apply bg-white border-b dark:bg-gray-800 dark:border-gray-700 even:bg-white odd:bg-teal-50/80;
+    }
+    .table-row-first {
+        @apply font-medium text-gray-900 whitespace-nowrap dark:text-white;
+    }
+    tr > th {
+        @apply px-6 py-5;
+    }
+    tr > td {
+        @apply px-6 py-4;
+    }
+    td > a.action {
+        @apply font-medium text-blue-600 dark:text-blue-500 hover:underline;
+    }
 }
